--- a/app/src/main/res/layout/activity_chapters.xml
+++ b/app/src/main/res/layout/activity_chapters.xml
@@ -21,12 +21,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="📚 Choose a Chapter"
-                android:textSize="31sp"
                 android:fontFamily="@font/comic_font"
-                android:textStyle="bold"
+                android:paddingBottom="90dp"
+                android:text="📚 Choose a Chapter"
+                android:textAllCaps="false"
                 android:textColor="#E65100"
-                android:paddingBottom="90dp"/>
+                android:textSize="31sp"
+                android:textStyle="bold" />
 
             <!-- Human Body Card -->
             <androidx.cardview.widget.CardView
@@ -134,7 +135,22 @@
                         android:textColor="#4E342E" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
-
+            <!-- Back Button -->
+            <Button
+                android:id="@+id/backButton"
+                android:layout_width="200dp"
+                android:layout_height="56dp"
+                android:text="Back to Main"
+                android:backgroundTint="#026580"
+                android:textColor="#FFFFFF"
+                android:fontFamily="@font/comic_font"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="160dp" />
         </LinearLayout>
+
+
     </ScrollView>
+
 </FrameLayout>
