--- a/app/src/main/res/layout/activity_solar_system_fun.xml
+++ b/app/src/main/res/layout/activity_solar_system_fun.xml
@@ -130,5 +130,24 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="16dp"
+            android:gravity="center"> <!-- Center the button -->
+
+            <Button
+                android:id="@+id/backButton3"
+                android:layout_width="170dp"
+                android:layout_height="56dp"
+                android:text="Back"
+                android:backgroundTint="#026580"
+                android:textColor="#FFFFFF"
+                android:fontFamily="@font/comic_font"
+                android:textAllCaps="false" />
+        </LinearLayout>
+
     </LinearLayout>
 </ScrollView>
